fixed mq on event full listing with no images (date overlapped content)

--- a/public/css/build.css
+++ b/public/css/build.css
@@ -445,6 +445,7 @@ body.with-modal{overflow:hidden}
 #modal-overlay{position:fixed;z-index:99;top:0;left:0;height:100%;width:100%;display:none;overflow-y:auto;background:rgba(0,0,0,.6)}
 #modal-container{position:absolute;margin-bottom:40px;z-index:100;width:920px;padding:20px;background:#f1f1f1;border-radius:3px;box-shadow:0 0 25px rgba(0,0,0,.5)}
 @media (max-width:1160px){.full-event .side-date{color:#000;width:auto;left:0;text-align:left;top:10px;background:rgba(255,255,255,.66);padding:5px}
+.full-event.no-image .side-date{display:none!important}
 .full-event .side-data .day-name,.full-event .side-data .time{color:#222}}
 @media only screen and (max-width:400px){#header-wrap{border-bottom:1px solid #ccc;height:50px;padding:0;position:relative;width:auto}
 #header-wrap #logo img.large,#header-wrap #photo-stream{display:none}
